--- a/stile.css
+++ b/stile.css
@@ -14,13 +14,9 @@ div.c2 {
 div.box1 {
     width: 100%;
     margin-bottom: 5px;
-    background: #009FDA;
+    background: #23ac73;
     
-}
-img.img_home {
-    border: 3px solid black;
-    
-}
+} 
 div.logo_home{
     font-size:xx-large;
     padding-left:700px;
@@ -50,7 +46,7 @@ form.registrazione {
 }
 
 body {
-    background-color: #7dd4f4;
+    background-color: #23ac73;
 }
 
 select.defaultselect{
@@ -165,5 +161,4 @@ div.box_comune {
     width:90%;
     background-color: white;
     margin:auto;
-    border: 3px solid rgb(0, 176, 252);
 }
